examples/test_mixed_arithmetic.etch
fn main() -> void {
    let x: int = 42;
    let y: float = 3.14;
    
    // This should fail - mixed types without explicit cast
    let result: float = x + y;
}